css/style.css
/* reset */

* {
    box-sizing: border-box;
    margin: 0px;
    border: 0px;
    font-family: 'Montserrat', sans-serif;
    font-family: 'Roboto', sans-serif;
}

/* /reset */

/* debug */

.debug .brd-blk-solid {
    border: 1px solid black;
}

.debug .purple {
    background-color: purple;
}

.debug .green {
    background-color: green;
}

/* /debug */

/* general */

main {
    height: 100vh;
    width: 100vw;
    position: relative;
}

.green-head{
    background-color: #009688;
    width: 100%;
    height: 15%;
}

.gray-bottom{
    background-color: #dbdbd2;
    width: 100%;
    height: 85%;
}

.gray-text {
    color: #b1b1b1;
}

/* /general */

/* wrapper content */

.wrapper{
    position: absolute;
    top: 2.5%;
    left: 10%;
    width: 80%;
    height: 95%;
    display: flex;
}

.navigation {
    width: 35%;
    height: 100%;
    border-right: 3px solid #b1b1b1;
    background-color: #ffffff;
}

.chat {
    width: 65%;
    height: 100%;
}

/* /wrapper content */

/* status */

.status {
    height: 8%;
    width: 100%;
    background-color: #eaeaea;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.status img {
    height: 70%;
    border-radius: 100%;
    margin-left: 30px;
}

.info {
    height: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.info .sub-container {
    margin-left: 30px;
}

.action{
    width: 150px;
    display: flex;
    justify-content: space-around;
}

.action i{
    font-size: 30px;
}

/* /status */

/* notification */

.notification {
    height: 8%;
    width: 100%;
    background-color: #8edafc;
    display: flex;
    align-items: center;
}

.notification span{
    margin-left: 30px;
    margin-right: 30px;
    background-color: white;
    height: 70px;
    width: 70px;
    border-radius: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.notification i {
    font-size: 37px;
    color: #8edafc;
    margin-left: 30px;
    margin-right: 30px;
}

/* /notification */

/* navigation */

.navigation .chat-nav {
    height: 84%;
    width: 100%;
}

.navigation .chat-nav .nav {
    height: 7%;
    width: 100%;
    background-color: #fafafa;
    display: flex;

}

.navigation .chat-nav .nav span{
    width: 110px;
    background-color: white;
    border-top: 1px solid lightgray;
    border-left: 1px solid lightgray;
    border-bottom: 1px solid lightgray;
    border-top-left-radius: 7px;
    border-bottom-left-radius: 7px;
    margin: 10px 0px 10px 10px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.navigation .chat-nav .nav span{
    font-size: 25px;
}

.navigation .chat-nav .nav input {
    width: 100%;
    border-top: 1px solid lightgray;
    border-right: 1px solid lightgray;
    border-bottom: 1px solid lightgray;
    border-top-right-radius: 7px;
    border-bottom-right-radius: 7px;
    margin: 10px 10px 10px 0px;
    padding: 8px;
}

.navigation .chat-nav .nav input::placeholder {
    font-size: 15px;
    color: #838383;
    font-weight: bold;
}

.archived {
    height: 93%;
    width: 100%;
    overflow-x: auto;
}

/* /navigation */

/* container */

.container {
    width: 100%;
    height: 100px;
    border-top: 1px solid lightgray;
    display: flex;
}

.container img {
    height: 80px;
    width: 80px;
    margin: 10px 30px;
    border-radius: 100%;
}

.sub-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.sub-container h2 {
    font-weight: 300;
}

.sub-container p {
    font-weight: 300;
}

/* /container */

/* message */

.messages {
    height: 84%;
    width: 100%;
    background-image: url("../img/mine.jpg");
    overflow-x: auto;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    flex-direction: column;
}

.sub-wrapper {
    width: 80%;
    height: 100%;
}

.message {
    padding: 25px 50px 25px 25px;
    max-width: 500px;
    width: max-content;
    border-radius: 10px;
    margin: 10px 0px;
    word-wrap: break-word;
    position: relative;
}

.message.green {
    background-color: #d5f9ba;
}

.message.gray {
    background-color: #ffffff;
}

.flex-right {
    display: flex;
    justify-content: flex-end;
}

.flex-left {
    display: flex;
    justify-content: flex-start;
}

.msg-option span#time{
    position: absolute;
    bottom: 15px;
    right: 15px;
    font-size: 10px;
}

.msg-option span#drop-down{
    display: none;
    position: absolute;
    top: 15px;
    right: 15px;
    cursor: pointer;
}

.opt {
    background-color: white;
    width: 180px;
    line-height: 45px;
    padding: 0px 16px;
    list-style: none;
    position: absolute;
    right: 0px;
    bottom: -90px
}

.opt li {
    text-align: center;
}

/* /message */

/* inbox */

.inbox {
    height: 8%;
    width: 100%;
    background-color: #f3eeea;
    display: flex;
    justify-content: space-between;
}

.inbox input{
    margin: 15px 0px;
    width: 1000px;
    border-radius: 7px;
    padding: 0px 20px;
}

.inbox i{
    font-size: 40px;
}

.inbox i{
    margin: 0px 30px;
}

.i-container {
    display: flex;
    align-items: center;
}

/* /inbox */


.d-active {
    display: none;
}

